@@ -1,0 +1,6 @@
+
+import plugin
+reload(plugin)
+
+Class = plugin.Class
+
